feat: add logic for movement on special cells